--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <h2 data-aos="fade-up">R.C.C.G EINDHOVEN</h2>
             <blockquote data-aos="fade-up" data-aos-delay="100">
               <p>
-                Stichting Glory Tabernacle Parish Join Us Every Sunday by 11am Prompt CET
+                Stichting Glory Tabernacle Eindhoven Join Us Every Sunday by 11am Prompt CET
                 timezone.
               </p>
             </blockquote>
@@ -189,7 +189,7 @@
                         God in-person <br />
                         and platform to grow spiritually towards God's purpose
                         for your life.<br />
-                        Then you are welcome to R.C.C.G Stiching Glory Tabernacle Parish
+                        Then you are welcome to R.C.C.G Stiching Glory Tabernacle Eindhoven
                         Eindhoven.<br /><br />
                         <br />
                         During the service you will experience God through the
@@ -296,7 +296,7 @@
             <div class="col-lg-8 text-center">
               <h2>Our Pastor</h2>
               <p class="fw-normal">
-                You are welcome to Stichting Glory Tabernacle Parish, Eindhoven.<br />
+                You are welcome to Stichting Glory Tabernacle Eindhoven<br />
                 The Presence and the Power of God is ever-present <br />Heaven
                 is our final goal while fulfilling the will and plan of God here
                 on earth. <br />
@@ -495,7 +495,7 @@
                 />
               </a>
               <p class="">
-               Stichting Glory Tabernacle is a multi-cultural church, Both young and old
+               Stichting Glory Tabernacle Eindhoven is a multi-cultural church, Both young and old
                 gather to worship God, irrespective of their background. We love
                 you with the love of God.
               </p>
