--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <!-- Meta tags remain unchanged -->
 
-    <title>RCCG Glory Tabernacle Eindhoven - Where Saints Arise!</title>
-    <meta content="Experience the move of God in Nederland! Join the Saints at RCCG Glory Tabernacle for powerful worship and life-changing word" name="description" />
+    <title>G.T.P Eindhoven Eindhoven - Where Saints Arise!</title>
+    <meta content="Experience the move of God in Nederland! Join the Saints at Glory Tabernacle Parish Eindhoven for powerful worship and life-changing word" name="description" />
     
     <!-- Favicons and fonts remain unchanged -->
 
