--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RCCG Eindhoven - About</title>
+    <title>G.T.P Eindhoven - About</title>
     
     <!-- Favicons -->
     <link href="assets/img/rccglogo2.png" rel="icon">
