--- a/mission.html
+++ b/mission.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>R.C.C.G Eindhoven - About</title>
+    <title>G.T.P Eindhoven - About</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
