--- a/gallery.html
+++ b/gallery.html
@@ -97,7 +97,7 @@
         <div
           class="container position-relative d-flex flex-column align-items-center"
         >
-          <h2>R.C.C.G Eindhoven Gallery</h2>
+          <h2>G.T.P Eindhoven Gallery</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li>Gallery</li>
@@ -660,7 +660,7 @@
       <div class="footer-legal">
         <div class="container">
           <div class="copyright">
-            &copy; Copyright <strong><span>R.C.C.G Eindhoven</span></strong
+            &copy; Copyright <strong><span> G.T.P Eindhoven</span></strong
             >. All Rights Reserved
           </div>
           <div class="credits">
