--- a/mission.html
+++ b/mission.html
@@ -223,7 +223,7 @@
       <div class="footer-legal">
         <div class="container">
           <div class="copyright">
-            &copy; Copyright <strong><span>R.C.C.G Eindhoven</span></strong
+            &copy; Copyright <strong><span>G.T.P Eindhoven</span></strong
             >. All Rights Reserved
           </div>
           <div class="credits">
