--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xl-4">
-            <h2 data-aos="fade-up" class="shout-hallelujah">R.C.C.G GLORY TABERNACLE EINDHOVEN</h2>
+            <h2 data-aos="fade-up" class="shout-hallelujah">GLORY TABERNACLE PARISH EINDHOVEN</h2>
             <blockquote data-aos="fade-up" data-aos-delay="100">
               <p class="fire-text">
                 🔥 WHERE FIRE FALLS! 🔥<br>
