--- a/what-we-do.html
+++ b/what-we-do.html
@@ -309,8 +309,7 @@
 
       <div class="footer-legal">
         <div class="container">
-          <div class="copyright">
-            &copy; Copyright <strong><span>R.C.C.G Eindhoven</span></strong
+          <div class="copyright">G.T.P Eindhoven</span></strong
             >. All Rights Reserved
           </div>
           <div class="credits">
