--- a/event.html
+++ b/event.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>G.T.P Eindhoven - Event</title>
+    <title>R.C.C.G Eindhoven - Event</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -47,14 +47,7 @@
       <div
         class="container-fluid container-xl d-flex align-items-center justify-content-between"
       >
-        <a href="index.html" class="logo d-flex align-items-center">
-          <img
-            style="background-color: white; border-radius: 10px"
-            src="assets/img/rccglogo.png"
-            alt="logo"
-          />
-        </a>
-
+  
         <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
         <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
 
@@ -126,7 +119,7 @@
 
                     <div class="content">
                       <p>
-                        RCCG EINDHOVEN Glory Tabernacle Parish Wijkcentrum de
+                        RCCG EINDHOVEN Glory Tabernacle Palace Eindhoven Wijkcentrum de
                         Mortel Savoiepad 14 5627DX Eindhoven, The Netherlands,
                         Eindhoven, Noordbrabant
                       </p>
@@ -164,7 +157,7 @@
 
                     <div class="content">
                       <p>
-                        RCCG EINDHOVEN Glory Tabernacle Parish Wijkcentrum de
+                        Stichting RCCG Glory Tabernacle Palace Eindhoven  Wijkcentrum de
                         Mortel Savoiepad 14 5627DX Eindhoven, The Netherlands,
                         Eindhoven, Noordbrabant
                       </p>
@@ -200,7 +193,7 @@
 
                     <div class="content">
                       <p>
-                        RCCG EINDHOVEN (Glory Tabernacle Parish Wijkcentrum de
+                        Stichting RCCG Glory Tabernacle Palace Eindhoven Wijkcentrum de
                         Mortel Savoiepad 14 5627DX Eindhoven, The Netherlands,
                         Eindhoven, Noordbrabant. <br />
                         We celebrate God in the lives of Glory Tabernacle women
@@ -239,7 +232,7 @@
 
                     <div class="content">
                       <p>
-                        RCCG EINDHOVEN (Glory Tabernacle Parish Wijkcentrum de
+                        Stichting RCCG Glory Tabernacle Palace Eindhoven Wijkcentrum de
                         Mortel Savoiepad 14 5627DX Eindhoven, The Netherlands,
                         Eindhoven, Noordbrabant <br />
                         Praise God with us as we celebrate the youths and what
@@ -277,7 +270,7 @@
 
                     <div class="content">
                       <p>
-                        RCCG EINDHOVEN (Glory Tabernacle Parish Wijkcentrum de
+                        Stichting RCCG Glory Tabernacle Palace Eindhoven Wijkcentrum de
                         Mortel Savoiepad 14 5627DX Eindhoven, The Netherlands,
                         Eindhoven, Noordbrabant <br />
                         <a href="#"><b>Theme:</b></a> Not By Might Not By Power
@@ -315,7 +308,7 @@
 
                     <div class="content">
                       <p>
-                        RCCG EINDHOVEN (Glory Tabernacle Parish Wijkcentrum de
+                        Stichting RCCG Glory Tabernacle Palace Eindhoven Wijkcentrum de
                         Mortel Savoiepad 14 5627DX Eindhoven, The Netherlands,
                         Eindhoven, Noordbrabant <br />
                         Join us to give thanks to the Lord for sustaining our
@@ -355,7 +348,7 @@
 
                     <div class="content">
                       <p>
-                        RCCG EINDHOVEN (Glory Tabernacle Parish Wijkcentrum de
+                        Stichting RCCG Glory Tabernacle Palace Eindhoven Wijkcentrum de
                         Mortel Savoiepad 14 5627DX Eindhoven, The Netherlands,
                         Eindhoven, Noordbrabant <br />We dance into the new year
                         with a heart of gratitude to God. Join to enter the new
@@ -506,7 +499,7 @@
       <div class="footer-legal">
         <div class="container">
           <div class="copyright">
-            &copy; Copyright <strong><span>G.T.P Eindhoven</span></strong
+            &copy; Copyright <strong><span>R.C.C.G Eindhoven</span></strong
             >. All Rights Reserved
           </div>
           <div class="credits">
