--- a/who-we-are.html
+++ b/who-we-are.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>G.T.P Eindhoven - About</title>
+    <title>R.C.C.G Eindhoven - About</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -47,13 +47,7 @@
       <div
         class="container-fluid container-xl d-flex align-items-center justify-content-between"
       >
-        <a href="index.html" class="logo d-flex align-items-center">
-          <img
-            style="background-color: white; border-radius: 10px"
-            src="assets/img/rccglogo.png"
-            alt="logo"
-          />
-        </a>
+       
 
         <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
         <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
@@ -714,7 +708,7 @@
       <div class="footer-legal">
         <div class="container">
           <div class="copyright">
-            &copy; Copyright <strong><span>G.T.P Eindhoven</span></strong
+            &copy; Copyright <strong><span>R.C.C.G Eindhoven</span></strong
             >. All Rights Reserved
           </div>
           <div class="credits">
