--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>G.T.P Eindhoven - Gallery</title>
+    <title>R.C.C.G Eindhoven - Gallery</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -47,13 +47,6 @@
       <div
         class="container-fluid container-xl d-flex align-items-center justify-content-between"
       >
-        <a href="index.html" class="logo d-flex align-items-center">
-          <img
-            style="background-color: white; border-radius: 10px"
-            src="assets/img/rccglogo.png"
-            alt="logo"
-          />
-        </a>
         <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
         <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
 
@@ -97,7 +90,7 @@
         <div
           class="container position-relative d-flex flex-column align-items-center"
         >
-          <h2>G.T.P Eindhoven Gallery</h2>
+          <h2>R.C.C.G Eindhoven Gallery</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li>Gallery</li>
@@ -660,7 +653,7 @@
       <div class="footer-legal">
         <div class="container">
           <div class="copyright">
-            &copy; Copyright <strong><span> G.T.P Eindhoven</span></strong
+            &copy; Copyright <strong><span>R.C.C.G Eindhoven</span></strong
             >. All Rights Reserved
           </div>
           <div class="credits">
