--- a/report.html
+++ b/report.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>G.T.P Eindhoven - Report</title>
+    <title>R.C.C.G Eindhoven - Report</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -263,7 +263,7 @@
       <div class="footer-legal">
         <div class="container">
           <div class="copyright">
-            &copy; Copyright <strong><span>G.T.P Eindhoven</span></strong
+            &copy; Copyright <strong><span>R.C.C.G Eindhoven</span></strong
             >. All Rights Reserved
           </div>
           <div class="credits">
