--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>R.C.C.G Eindhoven - About</title>
+    <title>G.T.P Eindhoven - About</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -130,7 +130,7 @@
       <section id="team" class="team">
         <div class="container" data-aos="fade-up">
           <div class="row gy-4">
-            <h1>History of R.C.C.G</h1>
+            <h1>History of G.T.P Eindhoven</h1>
             <span
               >History of The Redeemed Christian Church of God Worldwide</span
             >
@@ -325,7 +325,7 @@
       <div class="footer-legal">
         <div class="container">
           <div class="copyright">
-            &copy; Copyright <strong><span>R.C.C.G Eindhoven</span></strong
+            &copy; Copyright <strong><span>G.T.P Eindhoven</span></strong
             >. All Rights Reserved
           </div>
           <div class="credits">
@@ -357,3 +357,4 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
