--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>R.C.C.G Eindhoven - Contact</title>
+    <title>G.T.P Eindhoven - Contact</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -299,7 +299,7 @@
       <div class="footer-legal">
         <div class="container">
           <div class="copyright">
-            &copy; Copyright <strong><span>R.C.C.G Eindhoven</span></strong
+            &copy; Copyright <strong><span>G.T.P Eindhoven</span></strong
             >. All Rights Reserved
           </div>
           <div class="credits">
@@ -329,3 +329,4 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
