--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>R.C.C.G Eindhoven - Gallery</title>
+    <title>G.T.P Eindhoven - Gallery</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -685,3 +685,4 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
