--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xl-4">
-            <h2 data-aos="fade-up">R.C.C.G EINDHOVEN</h2>
+            <h2 data-aos="fade-up">G.T.P Eindhoven</h2>
             <blockquote data-aos="fade-up" data-aos-delay="100">
               <p>
                 Glory Tabernacle Parish Join Us Every Sunday by 11am Prompt CET
@@ -189,7 +189,7 @@
                         God in-person <br />
                         and platform to grow spiritually towards God's purpose
                         for your life.<br />
-                        Then you are welcome to R.C.C.G Glory Tabernacle Parish
+                        Then you are welcome to Glory Tabernacle Parish
                         Eindhoven.<br /><br />
                         <br />
                         During the service you will experience God through the
@@ -564,7 +564,7 @@
       <div class="footer-legal">
         <div class="container">
           <div class="copyright">
-            &copy; Copyright <strong><span>R.C.C.G Eindhoven</span></strong
+            &copy; Copyright <strong><span>G.T.P Eindhoven</span></strong
             >. All Rights Reserved
           </div>
           <div class="credits">
@@ -596,3 +596,4 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
