--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>G.T.P Eindhoven - About</title>
+    <title>G.T.P - About</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -103,9 +103,9 @@
             </div>
             <div class="col-lg-8">
               <div class="content ps-lg-5">
-                <h3>About Stichting Glory Tabernacle Palace Eindhoven</h3>
+                <h3>About Stichting Glory Tabernacle Parish </h3>
                 <p>
-                  The Redeemed Christian church of God, Stichting Glory Tabernacle Palace Eindhoven was
+                  The Redeemed Christian church of God, Stichting Glory Tabernacle Parish was
                   created in 2007 by two families by Pastor Mrs Bukky Olowu,
                   Pastor Adesuwa Bazuya, Brother Raphael Mamudu and the Adejumo
                   family.
@@ -130,7 +130,7 @@
       <section id="team" class="team">
         <div class="container" data-aos="fade-up">
           <div class="row gy-4">
-            <h1>History of G.T.P Eindhoven</h1>
+            <h1>History of G.T.P </h1>
             <span
               >History of The Redeemed Christian Church of God Worldwide</span
             >
@@ -256,7 +256,7 @@
                 />
               </a>
               <p class="">
-               Stichting Glory Tabernacle Palace Eindhoven is a multi-cultural church, Both young and old
+               Stichting Glory Tabernacle Parish is a multi-cultural church, Both young and old
                 gather to worship God, irrespective of their background. We love
                 you with the love of God.
               </p>
@@ -325,7 +325,7 @@
       <div class="footer-legal">
         <div class="container">
           <div class="copyright">
-            &copy; Copyright <strong><span>G.T.P Eindhoven</span></strong
+            &copy; Copyright <strong><span>G.T.P  </span></strong
             >. All Rights Reserved
           </div>
           <div class="credits">
