--- a/event.html
+++ b/event.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>G.T.P Eindhoven - Event</title>
+    <title>G.T.P - Event</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -119,7 +119,7 @@
 
                     <div class="content">
                       <p>
-                        RCCG EINDHOVEN Glory Tabernacle Palace Eindhoven Wijkcentrum de
+                        Glory Tabernacle Parish Wijkcentrum de
                         Mortel Savoiepad 14 5627DX Eindhoven, The Netherlands,
                         Eindhoven, Noordbrabant
                       </p>
@@ -157,7 +157,7 @@
 
                     <div class="content">
                       <p>
-                        Stichting RCCG Glory Tabernacle Palace Eindhoven  Wijkcentrum de
+                        Glory Tabernacle Parish Wijkcentrum de
                         Mortel Savoiepad 14 5627DX Eindhoven, The Netherlands,
                         Eindhoven, Noordbrabant
                       </p>
@@ -193,7 +193,7 @@
 
                     <div class="content">
                       <p>
-                        Stichting RCCG Glory Tabernacle Palace Eindhoven Wijkcentrum de
+                        Glory Tabernacle Parish Wijkcentrum de
                         Mortel Savoiepad 14 5627DX Eindhoven, The Netherlands,
                         Eindhoven, Noordbrabant. <br />
                         We celebrate God in the lives of Glory Tabernacle women
@@ -232,7 +232,7 @@
 
                     <div class="content">
                       <p>
-                        Stichting RCCG Glory Tabernacle Palace Eindhoven Wijkcentrum de
+                        Glory Tabernacle Parish Wijkcentrum de
                         Mortel Savoiepad 14 5627DX Eindhoven, The Netherlands,
                         Eindhoven, Noordbrabant <br />
                         Praise God with us as we celebrate the youths and what
@@ -270,7 +270,7 @@
 
                     <div class="content">
                       <p>
-                        Stichting RCCG Glory Tabernacle Palace Eindhoven Wijkcentrum de
+                        Glory Tabernacle Parish Wijkcentrum de
                         Mortel Savoiepad 14 5627DX Eindhoven, The Netherlands,
                         Eindhoven, Noordbrabant <br />
                         <a href="#"><b>Theme:</b></a> Not By Might Not By Power
@@ -308,7 +308,7 @@
 
                     <div class="content">
                       <p>
-                        Stichting RCCG Glory Tabernacle Palace Eindhoven Wijkcentrum de
+                        Glory Tabernacle Parish Wijkcentrum de
                         Mortel Savoiepad 14 5627DX Eindhoven, The Netherlands,
                         Eindhoven, Noordbrabant <br />
                         Join us to give thanks to the Lord for sustaining our
@@ -348,7 +348,7 @@
 
                     <div class="content">
                       <p>
-                        Stichting RCCG Glory Tabernacle Palace Eindhoven Wijkcentrum de
+                        Glory Tabernacle Parish Wijkcentrum de
                         Mortel Savoiepad 14 5627DX Eindhoven, The Netherlands,
                         Eindhoven, Noordbrabant <br />We dance into the new year
                         with a heart of gratitude to God. Join to enter the new
@@ -499,7 +499,7 @@
       <div class="footer-legal">
         <div class="container">
           <div class="copyright">
-            &copy; Copyright <strong><span>G.T.P Eindhoven</span></strong
+            &copy; Copyright <strong><span>G.T.P</span></strong
             >. All Rights Reserved
           </div>
           <div class="credits">
