--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>G.T.P Eindhoven - Gallery</title>
+    <title>G.T.P - Gallery</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -90,7 +90,7 @@
         <div
           class="container position-relative d-flex flex-column align-items-center"
         >
-          <h2>R.C.C.G Eindhoven Gallery</h2>
+          <h2>G.T.P Gallery</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li>Gallery</li>
@@ -653,7 +653,7 @@
       <div class="footer-legal">
         <div class="container">
           <div class="copyright">
-            &copy; Copyright <strong><span>R.C.C.G Eindhoven</span></strong
+            &copy; Copyright <strong><span>G.T.P</span></strong
             >. All Rights Reserved
           </div>
           <div class="credits">
