--- a/what-we-do.html
+++ b/what-we-do.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>G.T.P Eindhoven - About</title>
+    <title>G.T.P - About</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -303,7 +303,7 @@
       <div class="footer-legal">
         <div class="container">
           <div class="copyright">
-            &copy; Copyright <strong><span>G.T.P Eindhoven</span></strong
+            &copy; Copyright <strong><span>G.T.P </span></strong
             >. All Rights Reserved
           </div>
           <div class="credits">
