--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xl-4">
-            <h2 data-aos="fade-up">G.T.P Eindhoven</h2>
+            <h2 data-aos="fade-up">G.T.P </h2>
             <blockquote data-aos="fade-up" data-aos-delay="100">
               <p>
                 Glory Tabernacle Parish Join Us Every Sunday by 11am Prompt CET
@@ -190,7 +190,7 @@
                         and platform to grow spiritually towards God's purpose
                         for your life.<br />
                         Then you are welcome to Glory Tabernacle Parish
-                        Eindhoven.<br /><br />
+                        .<br /><br />
                         <br />
                         During the service you will experience God through the
                         Sunday school session, <br />
@@ -296,7 +296,7 @@
             <div class="col-lg-8 text-center">
               <h2>Our Pastor</h2>
               <p class="fw-normal">
-                You are welcome to Glory Tabernacle Parish, Eindhoven.<br />
+                You are welcome to Glory Tabernacle Parish.<br />
                 The Presence and the Power of God is ever-present <br />Heaven
                 is our final goal while fulfilling the will and plan of God here
                 on earth. <br />
@@ -564,7 +564,7 @@
       <div class="footer-legal">
         <div class="container">
           <div class="copyright">
-            &copy; Copyright <strong><span>G.T.P Eindhoven</span></strong
+            &copy; Copyright <strong><span>G.T.P</span></strong
             >. All Rights Reserved
           </div>
           <div class="credits">
