--- a/report.html
+++ b/report.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>G.T.P Eindhoven - Report</title>
+    <title>G.T.P - Report</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
