--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       >
         <a href="index.html" class="logo d-flex align-items-center">
           <img
-            style="background-color: white; border-radius: 10px"
+            style="background-color: transparent; border-radius: 10px"
             src="assets/img/rccglogo.png"
             alt="logo"
           />
