--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
             </div>
             <div class="col-lg-8">
               <div class="content ps-lg-5">
-                <h3>About Stichting Glory Tabernacle Parish </h3>
+                <h3>About Glory Tabernacle Parish </h3>
                 <p>
                   The Redeemed Christian church of God, Stichting Glory Tabernacle Parish was
                   created in 2007 by two families by Pastor Mrs Bukky Olowu,
