--- a/index.html
+++ b/index.html
@@ -279,11 +279,12 @@
             <div class="col-lg-8 text-center">
               <h2>Our Pastor</h2>
               <p class="fw-normal">
-                You are welcome to Glory Tabernacle Parish.<br />
-                The presence and power of God is ever-present.<br />
-                Heaven is our final goal, while fulfilling the will and plan of God here on earth.<br />
-                We are committed to sharing the unconditional love of God through the life of Christ and prayer.<br />
-                Welcome, and God bless you.
+               Welcome to Glory Tabernacle Parish.
+We are led by Pastor Dennis Shakka and Pastor Titilayo Shakka, who serve with a deep passion for God, His Word, and His people. Glory Tabernacle Parish is a Christ-centered church where the presence and power of God are ever present.
+Our mission is to raise lives that fulfill God’s will and purpose on earth, while keeping heaven as our ultimate goal. Through prayer, faith, and the life of Jesus Christ, we are committed to sharing the unconditional love of God and nurturing spiritual growth in every believer.
+You are warmly welcome to worship with us, grow with us, and encounter God in a deeper way. May God richly bless you.
+Our vision is to pursue holiness
+(Hebrews 12:14)
               </p>
               <p class="fw-bold">Our vision is to pursue holiness. (Hebrews 12:14)</p>
             </div>
