--- a/report.html
+++ b/report.html
@@ -69,6 +69,7 @@
                 <li><a href="who-we-are.html">Who We Are</a></li>
                 <li><a href="what-we-do.html">What We Do</a></li>
                 <li><a href="mission.html">Mission Statement</a></li>
+                <li><a href="our-vision-extra.html">Our Vision</a></li>
               </ul>
             </li>
             <li><a href="event.html">Event</a></li>
