--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                 <li><a href="what-we-do.html">What We Do</a></li>
                 <li><a href="mission.html">Mission Statement</a></li>
                   <li><a href="our-vision-extra.html">Our Vision</a></li>
+                <li><a href="meet-our-pastor.html">Meet Our Pastor</a></li>
               </ul>
             </li>
 
