--- a/meet-our-pastor.html
+++ b/meet-our-pastor.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>G.T.P - Contact</title>
+    <title>G.T.P - Meet Our Pastor</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -36,10 +36,13 @@
     />
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
     <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet" />
+
+    <!-- Template Main CSS File -->
     <link href="assets/css/main.css" rel="stylesheet" />
   </head>
 
-  <body class="page-contact">
+  <body class="page-about">
+    <!-- ======= Header ======= -->
     <header id="header" class="header d-flex align-items-center fixed-top">
       <div
         class="container-fluid container-xl d-flex align-items-center justify-content-between"
@@ -60,7 +63,9 @@
                 <li><a href="who-we-are.html">Who We Are</a></li>
                 <li><a href="what-we-do.html">What We Do</a></li>
                 <li><a href="mission.html">Mission Statement</a></li>
-                <li><a href="our-vision-extra.html">Our Vision</a></li>                <li><a href="meet-our-pastor.html">Meet Our Pastor</a></li>              </ul>
+                <li><a href="our-vision-extra.html">Our Vision</a></li>
+                <li><a href="meet-our-pastor.html">Meet Our Pastor</a></li>
+              </ul>
             </li>
             <li><a href="event.html">Event</a></li>
             <li><a href="gallery.html">Gallery</a></li>
@@ -83,135 +88,37 @@
     <!-- End Header -->
 
     <main id="main">
-      <!-- ======= Breadcrumbs ======= -->
-      <div class="breadcrumbs d-flex align-items-center">
-        <div
-          class="container position-relative d-flex flex-column align-items-center"
-        >
-          <h2>Contact Us</h2>
-          <ol>
-            <li><a href="index.html">Home</a></li>
-            <li>Contact</li>
-          </ol>
-        </div>
-      </div>
-      <!-- End Breadcrumbs -->
-
-      <!-- ======= Contact Section ======= -->
-      <section id="contact" class="contact">
-        <div class="container position-relative" data-aos="fade-up">
-          <div class="row gy-4 d-flex justify-content-end">
-            <div class="col-lg-5" data-aos="fade-up" data-aos-delay="100">
-              <div class="info-item d-flex">
-                <i class="bi bi-geo-alt flex-shrink-0"></i>
-                <div>
-                  <h4>Location:</h4>
-                  <p>
-                    Wijkcentrum de Mortel Savoiepad 14 5627DX Eindhoven,
-                    Netherlands.
-                  </p>
-                </div>
-              </div>
-              <!-- End Info Item -->
-
-              <div class="info-item d-flex">
-                <i class="bi bi-envelope flex-shrink-0"></i>
-                <div>
-                  <h4>Email:</h4>
-                  <p>gtpeindhoven@rccgeurope.org</p>
-                </div>
-              </div>
-              <!-- End Info Item -->
-
-              <div class="info-item d-flex">
-                <i class="bi bi-phone flex-shrink-0"></i>
-                <div>
-                  <h4>Call:</h4>
-                  <p>+31 63 414 66 88</p>
-                </div>
-              </div>
-              <!-- End Info Item -->
+      <!-- ======= Pastor Section ======= -->
+      <section id="pastor" class="about">
+        <div class="container" data-aos="fade-up">
+          <div class="row gy-4" data-aos="fade-up">
+            <div class="col-lg-4 text-center">
+              <img
+                src="assets/img/Pastor-Dennis.jpg"
+                class="img-fluid"
+                alt="Pastor Dennis Shakka"
+              />
+              <img
+                src="assets/img/pastors-wife.jpeg"
+                class="img-fluid"
+                alt="Pastor Titilayo Shakka"
+              />
             </div>
-
-            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="250">
-              <form
-                action="forms/contact.php"
-                method="post"
-                role="form"
-                class="php-email-form"
-              >
-                <div class="row">
-                  <div class="col-md-6 form-group">
-                    <input
-                      type="text"
-                      name="name"
-                      class="form-control"
-                      id="name"
-                      placeholder="Your Name"
-                      required
-                    />
-                  </div>
-                  <div class="col-md-6 form-group mt-3 mt-md-0">
-                    <input
-                      type="email"
-                      class="form-control"
-                      name="email"
-                      id="email"
-                      placeholder="Your Email"
-                      required
-                    />
-                  </div>
-                </div>
-                <div class="form-group mt-3">
-                  <input
-                    type="text"
-                    class="form-control"
-                    name="subject"
-                    id="subject"
-                    placeholder="Subject"
-                    required
-                  />
-                </div>
-                <div class="form-group mt-3">
-                  <textarea
-                    class="form-control"
-                    name="message"
-                    rows="5"
-                    placeholder="Message"
-                    required
-                  ></textarea>
-                </div>
-                <div class="my-3">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">
-                    Your message has been sent. Thank you!
-                  </div>
-                </div>
-                <div class="text-center">
-                  <button type="submit" name="submit" value="submit">Send Message</button>
-                </div>
-              </form>
-            </div>
-            <!-- End Contact Form -->
-          </div>
-          <div class="container mt-3">
-            <div class="row">
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d318001.78261168214!2d5.442632!3d51.487730000000006!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3d7b6a19331c030d!2sR.C.C.G%20Glory%20Tabernacle%20Parish!5e0!3m2!1sen!2sus!4v1662825376948!5m2!1sen!2sus"
-                width="600"
-                height="450"
-                style="border: 0"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"
-              ></iframe>
+            <div class="col-lg-8">
+              <div class="content ps-lg-5">
+                <h3>Meet Our Pastor</h3>
+                <p>
+                  Glory Tabernacle Parish is led by Pastor Dennis Shakka and Pastor Titilayo Shakka, who serve with a heart for prayer, holiness, and the Word of God.
+                </p>
+                <p>
+                  They are passionate about raising believers who walk in obedience to Christ, live transformed lives, and fulfill God’s purpose on earth while keeping heaven as their ultimate goal.
+                </p>
+              </div>
             </div>
           </div>
         </div>
       </section>
-
-      <!-- End Contact Section -->
+      <!-- End Pastor Section -->
     </main>
     <!-- End #main -->
 
@@ -223,14 +130,14 @@
             <div class="col-lg-5 col-md-12 footer-info">
               <a href="index.html" class="">
                 <img
-                  width="100"
-                  height="100"
+                  width="300"
+                  height="300"
                   src="assets/img/rccglogo2.png"
                   alt="logo"
                 />
               </a>
               <p class="">
-                Glory Tabernacle is a multi-cultural church, Both young and old
+               Stichting Glory Tabernacle Parish is a multi-cultural church, Both young and old
                 gather to worship God, irrespective of their background. We love
                 you with the love of God.
               </p>
@@ -299,7 +206,7 @@
       <div class="footer-legal">
         <div class="container">
           <div class="copyright">
-            &copy; Copyright <strong><span>G.T.P </span></strong
+            &copy; Copyright <strong><span>G.T.P  </span></strong
             >. All Rights Reserved
           </div>
           <div class="credits">
@@ -326,7 +233,8 @@
     <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
     <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="assets/vendor/php-email-form/validate.js"></script>
+
+    <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
   </body>
 </html>
-
