--- a/contact.html
+++ b/contact.html
@@ -73,6 +73,7 @@
               <ul>
                 <li><a href="report.html">ANBI</a></li>
                 <li><a href="#">..</a></li>
+                <li><a href="prayer-request.html">Prayer Request</a></li>
               </ul>
             </li>
           </ul>
