--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
               <ul>
                 <li><a href="report.html">ANBI</a></li>
                 <li><a href="#">Coming soon</a></li>
+                <li><a href="prayer-request.html">Prayer Request</a></li>
               </ul>
             </li>
           </ul>
