--- a/blog-details__.html
+++ b/blog-details__.html
@@ -73,6 +73,7 @@
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="team.html">Team</a></li>
             <li><a href="blog.html" class="active">Blog</a></li>
+            <li><a href="prayer-request.html">Prayer Request</a></li>
             <li class="dropdown">
               <a href="#"
                 ><span>Dropdown</span>
