--- a/gallery.html
+++ b/gallery.html
@@ -75,6 +75,7 @@
               <ul>
                 <li><a href="#">ANBI</a></li>
                 <li><a href="#">..</a></li>
+                <li><a href="prayer-request.html">Prayer Request</a></li>
               </ul>
             </li>
           </ul>
