--- a/our-vision.html
+++ b/our-vision.html
@@ -65,6 +65,7 @@
 							<ul>
 								<li><a href="report.html">ANBI</a></li>
 								<li><a href="#">..</a></li>
+								<li><a href="prayer-request.html">Prayer Request</a></li>
 							</ul>
 						</li>
 					</ul>
