--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -71,6 +71,7 @@
             <li><a href="our-vision-extra.html">Our Vision</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="portfolio.html" class="active">Portfolio</a></li>
+            <li><a href="prayer-request.html">Prayer Request</a></li>
             <li><a href="team.html">Team</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li class="dropdown">
