--- a/prayer-request.html
+++ b/prayer-request.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>G.T.P - Meet Our Pastor</title>
+    <title>G.T.P - Prayer Request</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -36,13 +36,10 @@
     />
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
     <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet" />
-
-    <!-- Template Main CSS File -->
     <link href="assets/css/main.css" rel="stylesheet" />
   </head>
 
-  <body class="page-about">
-    <!-- ======= Header ======= -->
+  <body class="page-contact">
     <header id="header" class="header d-flex align-items-center fixed-top">
       <div
         class="container-fluid container-xl d-flex align-items-center justify-content-between"
@@ -63,9 +60,7 @@
                 <li><a href="who-we-are.html">Who We Are</a></li>
                 <li><a href="what-we-do.html">What We Do</a></li>
                 <li><a href="mission.html">Mission Statement</a></li>
-                <li><a href="our-vision-extra.html">Our Vision</a></li>
-                <li><a href="meet-our-pastor.html">Meet Our Pastor</a></li>
-              </ul>
+                <li><a href="our-vision-extra.html">Our Vision</a></li>                <li><a href="meet-our-pastor.html">Meet Our Pastor</a></li>              </ul>
             </li>
             <li><a href="event.html">Event</a></li>
             <li><a href="gallery.html">Gallery</a></li>
@@ -78,7 +73,6 @@
               <ul>
                 <li><a href="report.html">ANBI</a></li>
                 <li><a href="#">..</a></li>
-                <li><a href="prayer-request.html">Prayer Request</a></li>
               </ul>
             </li>
           </ul>
@@ -89,37 +83,75 @@
     <!-- End Header -->
 
     <main id="main">
-      <!-- ======= Pastor Section ======= -->
-      <section id="pastor" class="about">
+      <!-- ======= Breadcrumbs ======= -->
+      <div class="breadcrumbs d-flex align-items-center">
+        <div
+          class="container position-relative d-flex flex-column align-items-center"
+        >
+          <h2>Prayer Request</h2>
+          <ol>
+            <li><a href="index.html">Home</a></li>
+            <li>Prayer Request</li>
+          </ol>
+        </div>
+      </div>
+      <!-- End Breadcrumbs -->
+
+      <!-- ======= Prayer Request Section ======= -->
+      <section id="prayer-request" class="prayer-request">
         <div class="container" data-aos="fade-up">
-          <div class="row gy-4" data-aos="fade-up">
-            <div class="col-lg-4 text-center">
-              <img
-                src="assets/img/Pastor-Dennis.jpg"
-                class="img-fluid"
-                alt="Pastor Dennis Shakka"
-              />
-              <img
-                src="assets/img/pastors-wife.jpeg"
-                class="img-fluid"
-                alt="Pastor Titilayo Shakka"
-              />
+          <div class="section-header">
+            <h2>PRAYER REQUEST PAGE</h2>
+          </div>
+
+          <div class="row">
+            <div class="col-lg-12">
+              <h3>Prayer Requests</h3>
+              <p>We believe in the power of prayer. No matter what you are facing, God is able. Submit your prayer request and our prayer team will stand with you in faith, believing God for breakthrough, healing, and peace.</p>
+              <a href="contact.html" class="btn btn-primary">📩 Submit Your Prayer Request</a>
             </div>
-            <div class="col-lg-8">
-              <div class="content ps-lg-5">
-                <h3>Meet Our Pastor</h3>
-                <p>
-                  Glory Tabernacle Parish is led by Pastor Dennis Shakka and Pastor Titilayo Shakka, who serve with a heart for prayer, holiness, and the Word of God.
-                </p>
-                <p>
-                  They are passionate about raising believers who walk in obedience to Christ, live transformed lives, and fulfill God’s purpose on earth while keeping heaven as their ultimate goal.
-                </p>
+          </div>
+
+          <div class="row mt-4">
+            <div class="col-lg-12 text-center">
+              <p>⸻</p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-lg-12">
+              <h3>Contact Us</h3>
+              <div class="info-item d-flex">
+                <i class="bi bi-geo-alt flex-shrink-0"></i>
+                <div>
+                  <h4>Address:</h4>
+                  <p>Wijkcentrum de Mortel Savoiepad 14 5627DX Eindhoven, Netherlands.</p>
+                </div>
+              </div>
+              <div class="info-item d-flex">
+                <i class="bi bi-phone flex-shrink-0"></i>
+                <div>
+                  <h4>Phone:</h4>
+                  <p>+31 63 414 66 88</p>
+                </div>
+              </div>
+              <div class="info-item d-flex">
+                <i class="bi bi-envelope flex-shrink-0"></i>
+                <div>
+                  <h4>Email:</h4>
+                  <p>gtpeindhoven@rccgeurope.org</p>
+                </div>
+              </div>
+              <div class="social-links d-flex mt-3">
+                <a href="https://www.facebook.com/rccgeindhoven/" class="facebook" target="_blank"><i class="bi bi-facebook"></i></a>
+                <a href="https://www.instagram.com/invites/contact/?i=5i4rrfv44k48&utm_content=2n69vef" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
+                <a href="https://youtube.com/channel/UC_jLVpVc0QI48kDSHW5lQfg" class="youtube" target="_blank"><i class="bi bi-youtube"></i></a>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <!-- End Pastor Section -->
+      <!-- End Prayer Request Section -->
     </main>
     <!-- End #main -->
 
@@ -131,14 +163,14 @@
             <div class="col-lg-5 col-md-12 footer-info">
               <a href="index.html" class="">
                 <img
-                  width="300"
-                  height="300"
+                  width="100"
+                  height="100"
                   src="assets/img/rccglogo2.png"
                   alt="logo"
                 />
               </a>
               <p class="">
-               Stichting Glory Tabernacle Parish is a multi-cultural church, Both young and old
+                Glory Tabernacle is a multi-cultural church, Both young and old
                 gather to worship God, irrespective of their background. We love
                 you with the love of God.
               </p>
@@ -207,7 +239,7 @@
       <div class="footer-legal">
         <div class="container">
           <div class="copyright">
-            &copy; Copyright <strong><span>G.T.P  </span></strong
+            &copy; Copyright <strong><span>G.T.P </span></strong
             >. All Rights Reserved
           </div>
           <div class="credits">
@@ -216,7 +248,6 @@
         </div>
       </div>
     </footer>
-    <!-- End Footer -->
     <!-- End Footer -->
 
     <a
@@ -234,8 +265,6 @@
     <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
     <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="assets/vendor/php-email-form/validate.js"></script>
-
-    <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
   </body>
 </html>
