--- a/team__.html
+++ b/team__.html
@@ -72,6 +72,7 @@
             <li><a href="services.html">Services</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="team.html" class="active">Team</a></li>
+            <li><a href="prayer-request.html">Prayer Request</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li class="dropdown">
               <a href="#"
