--- a/contact.html
+++ b/contact.html
@@ -213,6 +213,41 @@
       </section>
 
       <!-- End Contact Section -->
+        <!-- ======= Worship Section ======= -->
+      <section id="worship" class="worship py-5">
+        <div class="container" data-aos="fade-up">
+          <div class="row">
+            <div class="col-lg-8 mx-auto text-center">
+              <h2>Join Us in Worship</h2>
+              <div class="mt-4">
+                <h5>Sunday Service:</h5>
+                <p>Sunday Worship – [Add Time]</p>
+                <h5>Midweek Service:</h5>
+                <p>Bible Study / Prayer – [Add Day & Time]</p>
+                <p class="mt-3">
+                  <i class="bi bi-geo-alt"></i> Location: Wijkcentrum de Mortel Savoiepad 14 5627DX Eindhoven, Netherlands.
+                </p>
+                <a href="https://www.google.com/maps/dir//Wijkcentrum+de+Mortel+Savoiepad+14+5627DX+Eindhoven" class="btn btn-primary mt-3" target="_blank">Get Directions</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- ======= Visit Section ======= -->
+      <section id="visit" class="visit py-5 bg-light">
+        <div class="container" data-aos="fade-up">
+          <div class="row">
+            <div class="col-lg-8 mx-auto text-center">
+              <h2>Plan Your Visit</h2>
+              <p class="mt-3">
+                We would love to welcome you in person. From the moment you arrive, you’ll be greeted with warmth, love, and the presence of God.
+              </p>
+              <a href="https://www.google.com/maps/dir//Wijkcentrum+de+Mortel+Savoiepad+14+5627DX+Eindhoven" class="btn btn-secondary mt-3" target="_blank">Plan Your Visit</a>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- End #main -->
 
