--- a/contact.html
+++ b/contact.html
@@ -221,9 +221,9 @@
               <h2>Join Us in Worship</h2>
               <div class="mt-4">
                 <h5>Sunday Service:</h5>
-                <p>Sunday Worship – [Add Time]</p>
+                <p>Sunday Worship – 10:30/13:30</p>
                 <h5>Midweek Service:</h5>
-                <p>Bible Study / Prayer – [Add Day & Time]</p>
+                <p>Bible Study / Prayer – Tuesdayy 19:00</p>
                 <p class="mt-3">
                   <i class="bi bi-geo-alt"></i> Location: Wijkcentrum de Mortel Savoiepad 14 5627DX Eindhoven, Netherlands.
                 </p>
