--- a/what-we-do.html
+++ b/what-we-do.html
@@ -243,22 +243,19 @@
               </p>
               <div class="social-links d-flex mt-3">
                 <a
-                  href="https://www.facebook.com/rccgeindhoven/"
-                  class="facebook"
+                  href="https://www.tiktok.com/@glorytabernacle_parish?_r=1&_t=ZG-92jlka7frNI"
+                  target="_blank"
+                  ><i class="bi bi-tiktok"></i
+                ></a>
+                <a
+                  href="https://www.facebook.com/share/1Ci9KpWRnc/?mibextid=wwXIfr"
                   target="_blank"
                   ><i class="bi bi-facebook"></i
                 ></a>
                 <a
-                  href="https://www.instagram.com/invites/contact/?i=5i4rrfv44k48&utm_content=2n69vef"
-                  class="instagram"
+                  href="https://www.instagram.com/glory_tabernacle_parish?igsh=cGhmN28waHFleXlm&utm_source=qr"
                   target="_blank"
                   ><i class="bi bi-instagram"></i
-                ></a>
-                <a
-                  href="https://youtube.com/channel/UC_jLVpVc0QI48kDSHW5lQfg"
-                  class="youtube"
-                  target="_blank"
-                  ><i class="bi bi-youtube"></i
                 ></a>
               </div>
             </div>
