--- a/index.html
+++ b/index.html
@@ -441,8 +441,16 @@ Our vision is to pursue holiness
 
               <div class="social-links d-flex mt-3">
                 <a
-                  href="https://www.facebook.com/rccgeindhoven/"
-                  class="facebook"
+                  href="https://www.tiktok.com/@glorytabernacle_parish?_r=1&_t=ZG-92jlka7frNI"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="Visit our TikTok page"
+                >
+                  <i class="bi bi-tiktok" aria-hidden="true"></i>
+                </a>
+
+                <a
+                  href="https://www.facebook.com/share/1Ci9KpWRnc/?mibextid=wwXIfr"
                   target="_blank"
                   rel="noopener noreferrer"
                   aria-label="Visit our Facebook page"
@@ -451,23 +459,12 @@ Our vision is to pursue holiness
                 </a>
 
                 <a
-                  href="https://www.instagram.com/invites/contact/?i=5i4rrfv44k48&utm_content=2n69vef"
-                  class="instagram"
+                  href="https://www.instagram.com/glory_tabernacle_parish?igsh=cGhmN28waHFleXlm&utm_source=qr"
                   target="_blank"
                   rel="noopener noreferrer"
                   aria-label="Visit our Instagram page"
                 >
                   <i class="bi bi-instagram" aria-hidden="true"></i>
-                </a>
-
-                <a
-                  href="https://youtube.com/channel/UC_jLVpVc0QI48kDSHW5lQfg"
-                  class="youtube"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  aria-label="Visit our YouTube channel"
-                >
-                  <i class="bi bi-youtube" aria-hidden="true"></i>
                 </a>
               </div>
             </div>
