--- a/team__.html
+++ b/team__.html
@@ -262,12 +262,9 @@
                 iaculis eu non diam phasellus.
               </p>
               <div class="social-links d-flex mt-3">
-                <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-                <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-                <a href="#" class="instagram"
-                  ><i class="bi bi-instagram"></i
-                ></a>
-                <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                <a href="https://www.tiktok.com/@glorytabernacle_parish?_r=1&_t=ZG-92jlka7frNI" target="_blank"><i class="bi bi-tiktok"></i></a>
+                <a href="https://www.facebook.com/share/1Ci9KpWRnc/?mibextid=wwXIfr" target="_blank"><i class="bi bi-facebook"></i></a>
+                <a href="https://www.instagram.com/glory_tabernacle_parish?igsh=cGhmN28waHFleXlm&utm_source=qr" target="_blank"><i class="bi bi-instagram"></i></a>
               </div>
             </div>
 
