--- a/about.html
+++ b/about.html
@@ -95,7 +95,8 @@
               <img
                 src="assets/img/Pastor-Dennis.jpg"
                 class="img-fluid"
-                alt="logo"
+                alt="Pastor Dennis Shakka"
+                loading="lazy"
               />
               <div class="member-info py-3">
                 <h4 class="fw-bold">Dennis Shakka</h4>
@@ -253,7 +254,7 @@
                   width="300"
                   height="300"
                   src="assets/img/rccglogo2.png"
-                  alt="logo"
+                  alt="Glory Tabernacle Parish logo"
                 />
               </a>
               <p class="">
