--- a/index.html
+++ b/index.html
@@ -13,7 +13,23 @@
       name="keywords"
       content="Glory Tabernacle Parish, Sunday Service, Worship, Home Cell, Christian"
     />
-    <meta name="theme-color" content="#0b0b0b" />
+    <meta name="theme-color" content="#d4af37" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yourwebsite.com/" />
+    <meta property="og:title" content="Glory Tabernacle Parish (G.T.P)" />
+    <meta property="og:description" content="Welcome to Glory Tabernacle Parish. Join us every Sunday at 11:00 AM. Connect, belong, learn and grow." />
+    <meta property="og:image" content="https://yourwebsite.com/assets/img/rccglogo2.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://yourwebsite.com/" />
+    <meta property="twitter:title" content="Glory Tabernacle Parish (G.T.P)" />
+    <meta property="twitter:description" content="Welcome to Glory Tabernacle Parish. Join us every Sunday at 11:00 AM. Connect, belong, learn and grow." />
+    <meta property="twitter:image" content="https://yourwebsite.com/assets/img/rccglogo2.png" />
+
+    <link rel="canonical" href="https://yourwebsite.com/" />
 
     <!-- Favicons -->
     <link href="assets/img/rccglogo2.png" rel="icon" />
@@ -37,6 +53,37 @@
 
     <!-- Main CSS -->
     <link href="assets/css/main.css" rel="stylesheet" />
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Church",
+      "name": "Glory Tabernacle Parish",
+      "alternateName": "G.T.P",
+      "url": "https://yourwebsite.com",
+      "logo": "https://yourwebsite.com/assets/img/rccglogo2.png",
+      "description": "A welcoming, Spirit-filled community that honours God, grows disciples, and serves the neighbourhood with compassion.",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Wijkcentrum de Mortel Savoiepad 14",
+        "addressLocality": "Eindhoven",
+        "postalCode": "5627DX",
+        "addressCountry": "NL"
+      },
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+31-63-414-66-88",
+        "email": "gtpeindhoven@rccgeurope.org",
+        "contactType": "customer service"
+      },
+      "sameAs": [
+        "https://www.facebook.com/share/1Ci9KpWRnc/?mibextid=wwXIfr",
+        "https://www.instagram.com/glory_tabernacle_parish?igsh=cGhmN28waHFleXlm&utm_source=qr",
+        "https://www.tiktok.com/@glorytabernacle_parish?_r=1&_t=ZG-92jlka7frNI"
+      ]
+    }
+    </script>
   </head>
 
   <body class="page-index">
