--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           </div>
 
           <div class="col-xl-8 text-center p-3">
-            <h2 class="mb-2 text-white">Welcome to church</h2>
+            <h2 class="mb-2 text-white">Glory Tabernacle Parish</h2>
             <p class="text-white fw-bold font-monospace mb-0">
               Connect &clubs; Belong &clubs; Learn &clubs; Grow
             </p>
